--- a/backend/package.json
+++ b/backend/package.json
@@ -23,5 +23,8 @@
     "sequelize": "^6.37.3",
     "winston": "^3.14.2",
     "winston-daily-rotate-file": "^5.0.0"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.2"
   }
 }
